# icb-alns

./: .gitignore  README.md  main.py  pyproject.toml
cluster_alns/: autofit_weights.py  custom_alns.py  utils.py
cluster_alns/cvrp/: utils.py
cluster_alns/cvrp/operators/: destroy.py  repair.py
cluster_alns/cvrp/problem/: initial_solution.py  state.py
cluster_alns/rl/environments/: __init__.py  ai4tsp_env.py  cvrp_env.py  tsp_env.py
cluster_alns/runners/alns/: runner.py
cluster_alns/runners/alns/cvrp/: runner.py
cluster_alns/runners/alns/tsp/: ai4_runner.py  runner.py
cluster_alns/runners/rl/: config.py  trainer.py
cluster_alns/tsp/: utils.py
cluster_alns/tsp/operators/: destroy.py  repair.py
cluster_alns/tsp/operators/ai4/: destroy.py  repair.py
cluster_alns/tsp/problem/: ai4_state.py  initial_solution.py  state.py
paper_reproduction/: ALNS_ai4_benchmark.sh  RL_ai4_benchmark.sh  RL_cvrp_benchmark.sh
paper_reproduction/cvrp/: CVRP_1000_results.csv  RL_cvrp_100_result.csv  analysis_cvrp_1000.py  baseline.py  rl_benchmark.sh  rl_cvrp.py
paper_reproduction/cvrp/configs/: ALNS_debug.json  ALNS_kmeans_1000.json  ALNS_kmeans_10000.json  ALNS_original_1000.json  ALNS_original_10000.json  ALNS_pca_1000.json  ALNS_pca_10000.json  kmeans_rl_1000.yml  kmeans_rl_10000.yml  original_rl_100.yml  original_rl_1000.yml  original_rl_10000.yml  pca_rl_1000.yml  pca_rl_10000.yml
paper_reproduction/tsp/: AI4_results_100.csv  AI4_results_20.csv  AI4_results_50.csv  RL_AI4_100.csv  RL_AI4_20.csv  RL_AI4_50.csv  ai4.py  analysis_ai4.py  baseline.py  iter_analysis.py  rl_tsp.py
paper_reproduction/tsp/configs/: ALNS_ai4_debug.json  ALNS_ai4_kmeans_100.json  ALNS_ai4_kmeans_20.json  ALNS_ai4_kmeans_50.json  ALNS_ai4_original_100.json  ALNS_ai4_original_20.json  ALNS_ai4_original_50.json  ALNS_ai4_pca_100.json  ALNS_ai4_pca_20.json  ALNS_ai4_pca_50.json  ALNS_tsp_1000.json  ALNS_tsp_10000.json  ALNS_tsp_debug.json  ai4_rl_100_original.yml  ai4_rl_20_original.yml  ai4_rl_50_original.yml  tsp_rl.yml
